Overflow correction

--- a/Responsive Web Design/14_TechnicalDocumentation_CertificationProject/styles.css
+++ b/Responsive Web Design/14_TechnicalDocumentation_CertificationProject/styles.css
@@ -35,6 +35,9 @@ header {
 #navbar ul {
   padding: 0;
   margin: 0;
+  max-height: calc(100% - 70px);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #navbar li {
@@ -105,18 +108,13 @@ code {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 350px;
+    height: 300px;
     border: 1px solid;
-  }
-
-  #navbar ul {
-    overflow-y: scroll;
-    max-height: calc(100% - 70px);
   }
 
   #main-doc {
     position: relative;
     margin-left: 0px;
-    margin-top: 350px;
+    margin-top: 300px;
   }
 }
